k8s/aeris/templates/front/front.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  type: LoadBalancer
  #loadBalancerIP: "13.81.34.213"
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 80
