k8s/aeris/templates/front/front_cluster.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-cluster
spec:
  type: ClusterIP
  #loadBalancerIP: "13.81.34.213"
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 80
